# ptrs-gesher

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md  SECURITY.md  audit_diag.txt  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: publish.sh
.github/workflows/: ci.yml  coverage.yml  release.yml
crates/bridge-line/: Cargo.toml  README.md
crates/bridge-line/benches/: parse_bench.rs
crates/bridge-line/examples/: parse_torrc.rs
crates/bridge-line/src/: lib.rs
crates/bridge-line/tests/: fuzz_bridge.rs  proptest_roundtrip.rs
crates/core/: Cargo.toml  README.md
crates/core/benches/: args_bench.rs
crates/core/examples/: parse_args.rs
crates/core/src/: args.rs  error.rs  helpers.rs  lib.rs  log.rs  orport.rs  passthrough.rs
crates/core/tests/: fuzz_args.rs  proptest_args.proptest-regressions  proptest_args.rs
crates/lyrebird/: Cargo.toml  README.md
crates/lyrebird/benches/: lyrebird_bench.rs
crates/lyrebird/examples/: credentials.rs
crates/lyrebird/src/: lib.rs  main.rs
crates/lyrebird/src/tunnel_mgr/: metrics.rs  mod.rs
crates/obfs4/: Cargo.toml  README.md
crates/obfs4/benches/: obfs4_bench.rs  throughput_bench.rs
crates/obfs4/examples/: echo_handshake.rs
crates/obfs4/proptest-regressions/framing/messages_v1/: mod.txt
crates/obfs4/src/: client.rs  constants.rs  error.rs  lib.rs  proto.rs  pt.rs  server.rs  sessions.rs
crates/obfs4/src/common/: ct.rs  drbg.rs  kdf.rs  mod.rs  probdist.rs  replay_filter.rs  x25519_elligator2.rs
crates/obfs4/src/common/ntor_arti/: mod.rs
crates/obfs4/src/framing/: codecs.rs  handshake.rs  messages_base.rs  mod.rs
crates/obfs4/src/framing/messages_v1/: mod.rs
crates/obfs4/src/handshake/: handshake_client.rs  handshake_server.rs  integration.rs  mod.rs  utils.rs
crates/obfs4/src/test_utils/: mod.rs
crates/obfs4/tests/: e2e_concurrent.rs  e2e_data_path.rs  e2e_error_paths.rs  e2e_security.rs  fuzz_messages.rs
crates/ptrs-gesher/: Cargo.toml  README.md
crates/ptrs-gesher/benches/: umbrella_bench.rs
crates/ptrs-gesher/examples/: umbrella.rs
crates/ptrs-gesher/src/: lib.rs
crates/webtunnel/: Cargo.toml  README.md
crates/webtunnel/benches/: webtunnel_bench.rs
crates/webtunnel/examples/: build_request.rs
crates/webtunnel/src/: handshake.rs  lib.rs
crates/webtunnel/tests/: e2e_handshake.rs  fuzz_response.rs  proptest_response.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  RELEASING.md
examples/: Cargo.toml
examples/examples/: args_roundtrip_table.rs  bridge_line_to_obfs4_client.rs  dispatch_bridge.rs  embed_lyrebird.rs  obfs4_echo_over_tcp.rs
