[package]
name = "ptrs-gesher-core"
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Pluggable Transport traits and helpers (core of the ptrs-gesher framework)"
keywords = ["tor", "censorship", "pluggable", "transports"]
categories = ["network-programming", "cryptography"]
repository = "https://github.com/PHPCraftdream/ptrs-gesher"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
debug = []

[lib]
name = "ptrs"
crate-type = ["rlib"]

[dependencies]
futures = "0.3.30"
itertools = "0.13.0"
subtle = "2.5.0"
thiserror = "2"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1.40"
url = "2.5.0"

[dev-dependencies]
tracing-subscriber = "0.3.18"
serial_test = "3.0.0"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "args_bench"
harness = false
