[package]
name = "ptrs-gesher"
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Pluggable Transports framework for Rust: obfs4, webtunnel, lyrebird (umbrella crate)"
keywords = ["tor", "censorship", "pluggable", "transports", "obfs4"]
categories = ["network-programming", "cryptography"]
repository = "https://github.com/PHPCraftdream/ptrs-gesher"
readme = "../../README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["obfs4", "webtunnel", "bridge-line"]
obfs4 = ["dep:obfs4"]
webtunnel = ["dep:webtunnel"]
bridge-line = ["dep:bridge_line"]
lyrebird = ["dep:lyrebird"]

[dependencies]
ptrs = { package = "ptrs-gesher-core", path = "../core", version = "0.2.0" }
obfs4 = { package = "ptrs-gesher-obfs4", path = "../obfs4", version = "0.2.0", optional = true }
webtunnel = { package = "ptrs-gesher-webtunnel", path = "../webtunnel", version = "0.2.0", optional = true }
bridge_line = { package = "ptrs-gesher-bridge-line", path = "../bridge-line", version = "0.2.0", optional = true }
lyrebird = { package = "ptrs-gesher-lyrebird", path = "../lyrebird", version = "0.2.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["net"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "umbrella_bench"
harness = false
